[project]
name = "archery-mcp"
version = "0.1.0"
description = "MCP Server for Archery SQL Audit Platform"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "archery", "sql-audit", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
archery-mcp = "archery_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/archery_mcp"]
